20060317:
- fix: mbuffer erroneously return with EXIT_SUCCESS when it got 
       interrupted by SIGINT or SIGTERM

20060728:
- changed signal handling to prevent syscalls returning with EINTR in
  reader and writer
- fix for warnings, fatals, and errors getting truncated
- sleep before printing I/O rates for the first time to prevent showing
  insane values

20060704:
- use condition variables to safely signal crossing of watermarks
- include times full/empty (crossing of low/high watermark) in summary
  (proposal by Alex Kramarov)
- enhanced status and summary output to be display stats with a higher
  precisions

20060626:
- bugfix and enhancement for rate limitation code
- fixed regressions caused by switching from float to double
- make sure outputThread doesn't start initially if -P is set
- write debug logs a little bit more thread friendly 
  (i.e. switched from stream- to normal file ops)

20060616:
- added speed limiting (options -r and -R)
- fix errormessage in calcint
- show option -d in usage output only if it is available
- use of float really doesn't make any sense nowadays;
  changed all floats to double

20060421:
- set exitcode to failure whenever an error occures
- fixed a warning

20060324:
- added option -c to enable synchronous data integrity I/O:
  This was enabled by default until now, but may cause a decrease in
  performance as it requires a higher number of I/O ops. On systems
  without full synchronous data integrity support, no difference will
  be observable concerning performance. Systems that support it, will
  gain increased performace without -c, but error reporting will be 
  more precise with -c.
- changed errormessages to include offset
- added support for Solaris' directio hinting
- made memlock support an automagic option (compiled in if available)
- simplify CFLAGS overriding
- more portable largefile support solution
- minimized configure script
- default to native compiler instead of gcc

20060217: